# rm_board_c

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  openocd.cfg  prehooks.rhai  rust-toolchain.toml
.cargo/: config.toml
blinky/: Cargo.toml  Embed.toml  build.rs
blinky/src/system/: heartbeat.rs  interrupts.rs  status.rs
commu/: Cargo.toml
commu/src/: main.rs
commu/src/system/: interrupts.rs  mod.rs  status.rs
commu/src/tasks/blinky/: mod.rs
commu/src/tasks/health/: mod.rs
commu/src/tasks/pictrans/: mod.rs
crates/: Cargo.toml
crates/dji-frame/: Cargo.toml
crates/dji-frame/src/: crc16_dji.rs  crc8_dji.rs  error.rs  frame.rs  lib.rs  msger.rs  tests.rs
crates/dji-gentrans/: Cargo.toml
crates/dji-gentrans/src/: buff.rs  dart.rs  event.rs  health.rs  heat.rs  hurt.rs  lib.rs  pos.rs  result.rs  states.rs  status.rs  warning.rs
crates/dji-pictrans/: Cargo.toml
crates/dji-pictrans/src/: custom.rs  lib.rs  remote.rs
crates/dji-ui/: Cargo.toml
crates/dji-ui/src/: common.rs  delete_layer.rs  draw_figure.rs  lib.rs
device/: Cargo.toml
device/src/: main.rs
device/src/system/: devices.rs  interrupts.rs  resources.rs
device/src/tasks/bxcan/: init.rs  mod.rs
device/src/tasks/bxcan/device/: dajiang.rs  damiao.rs  impls.rs  mod.rs
device/src/tasks/bxcan/msger/: can1_rcv.rs  can1_snd.rs  can2_rcv.rs  can2_snd.rs  mod.rs
utils/: Cargo.toml
utils/src/: cell.rs  init.rs  lib.rs  macros.rs
{{crate_name}}/: Cargo.toml  Embed.toml
{{crate_name}}/src/: main.rs
{{crate_name}}/src/controller/: mod.rs
{{crate_name}}/src/system/: mod.rs  resources.rs
{{crate_name}}/src/tasks/blinky/: mod.rs
