[package]
name = "utils"

version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

autobenches  = false
autoexamples = false
autotests    = false


[dependencies.embassy-stm32]
version = "0.5"
### Only chips of the same model can be used at the same time
features = ["defmt", "single-bank", "time-driver-any", "stm32f407ig", "memory-x"]


[dependencies]

defmt.workspace = true

embassy-futures = "0.1"

portable-atomic = { version = "1", features = ["float"] }
defmt-rtt       = { version = "1.0", features = ["disable-blocking-mode"] }
heapless        = { version = "0.9", features = ["defmt", "portable-atomic"] }
embassy-sync    = { version = "0.7", features = ["defmt"] }
embassy-time    = { version = "0.5", features = ["defmt", "tick-hz-32_768"] }
panic-probe     = { version = "1.0", features = ["print-defmt"] }
strum           = { version = "0.27", default-features = false, features = ["derive"] }

[dependencies.cortex-m]
version  = "0.7"
features = ["critical-section-single-core", "linker-plugin-lto", "inline-asm"]
