[package]
name = "dji-frame"

version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

autobenches  = false
autoexamples = false
autotests    = false


[dependencies]
defmt = { workspace = true, optional = true }


[features]
log   = ["defmt"]
defmt = ["dep:defmt"]
